Co-authored-by: Snow X. Bai <xueapp@users.noreply.github.com>

--- a/client/index.html
+++ b/client/index.html
@@ -1,10 +1,11 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
     <title>TypeScrrrrrt</title>
     <script src="index.js"></script>
   </head>
   <body>
+    <h1>TypeScrrrrrt</h1>
     <div id="root"></div>
   </body>
 </html>
