added sign-up button to nav bar

--- a/client/index.html
+++ b/client/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>TypeScrrrrrt</title>
+    <title>TypeAlias</title>
     <script src="index.js"></script>
   </head>
   <body>
-    <h1>TypeScrrrrrt</h1>
+    <h1>TypeSkrrrt</h1>
     <div id="root"></div>
   </body>
 </html>
