--- a/client/index.html
+++ b/client/index.html
@@ -5,7 +5,7 @@
     <script src="index.js"></script>
   </head>
   <body>
-    <h1>TypeSkrrrt</h1>
+    <h1>TypeAlias</h1>
     <div id="root"></div>
   </body>
 </html>
